--- a/Teste_Site_MelhorVisao/.classpath
+++ b/Teste_Site_MelhorVisao/.classpath
@@ -7,17 +7,17 @@
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
-	<classpathentry kind="lib" path="C:/Users/181620009.SENACINFO/eclipse/java-oxygen/eclipse/selenium/libs/byte-buddy-1.8.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/181620009.SENACINFO/eclipse/java-oxygen/eclipse/selenium/libs/commons-codec-1.10.jar"/>
-	<classpathentry kind="lib" path="C:/Users/181620009.SENACINFO/eclipse/java-oxygen/eclipse/selenium/libs/commons-exec-1.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/181620009.SENACINFO/eclipse/java-oxygen/eclipse/selenium/libs/commons-logging-1.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/181620009.SENACINFO/eclipse/java-oxygen/eclipse/selenium/libs/gson-2.8.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/181620009.SENACINFO/eclipse/java-oxygen/eclipse/selenium/libs/guava-23.6-jre.jar"/>
-	<classpathentry kind="lib" path="C:/Users/181620009.SENACINFO/eclipse/java-oxygen/eclipse/selenium/libs/httpclient-4.5.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/181620009.SENACINFO/eclipse/java-oxygen/eclipse/selenium/libs/httpcore-4.4.6.jar"/>
-	<classpathentry kind="lib" path="C:/Users/181620009.SENACINFO/eclipse/java-oxygen/eclipse/selenium/libs/okhttp-3.9.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/181620009.SENACINFO/eclipse/java-oxygen/eclipse/selenium/libs/okio-1.13.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/181620009.SENACINFO/eclipse/java-oxygen/eclipse/selenium/client-combined-3.12.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/181620009.SENACINFO/eclipse/java-oxygen/eclipse/selenium/client-combined-3.12.0-sources.jar"/>
+	<classpathentry kind="lib" path="C:/uc13/selenium/client-combined-3.12.0.jar"/>
+	<classpathentry kind="lib" path="C:/uc13/selenium/client-combined-3.12.0-sources.jar"/>
+	<classpathentry kind="lib" path="C:/uc13/selenium/libs/byte-buddy-1.8.3.jar"/>
+	<classpathentry kind="lib" path="C:/uc13/selenium/libs/commons-codec-1.10.jar"/>
+	<classpathentry kind="lib" path="C:/uc13/selenium/libs/commons-exec-1.3.jar"/>
+	<classpathentry kind="lib" path="C:/uc13/selenium/libs/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="C:/uc13/selenium/libs/gson-2.8.2.jar"/>
+	<classpathentry kind="lib" path="C:/uc13/selenium/libs/guava-23.6-jre.jar"/>
+	<classpathentry kind="lib" path="C:/uc13/selenium/libs/httpclient-4.5.3.jar"/>
+	<classpathentry kind="lib" path="C:/uc13/selenium/libs/httpcore-4.4.6.jar"/>
+	<classpathentry kind="lib" path="C:/uc13/selenium/libs/okhttp-3.9.1.jar"/>
+	<classpathentry kind="lib" path="C:/uc13/selenium/libs/okio-1.13.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
